Update Server.java